app/assets/stylesheets/partials/_base.less
@import "../util/_mixins";
@import "../util/_colors";

@font-face {
    font-family: "Proxima Nova Light";
    src: url("../fonts/Proxima Nova Light.otf") format("opentype");
}

@font-face {
    font-family: "Proxima Nova Thin";
    src: url("../fonts/Proxima Nova Thin.otf") format("opentype");
}

body {
    font-family: "Proxima Nova Light", "Montserrat", sans-serif;
    background: @bg;
    margin-top: 100px;
    padding-bottom: 200px;
    font-size: 18px;
}

p {
    line-height: 1.5em;
    margin: 5px 0 0 0;
}

input, button, select {
    height: 20px;
    font-family: "Proxima Nova Light";
    font-size: 18px;
}

select {
    height: 25px;
    -webkit-appearance: menulist-button;
}

h1, h2, h3, h4 {
    margin-bottom: 10px;
}

ul {
    list-style: none;
    .no_margin;
    .no_padding;

    &.horizontal li {
        display: inline-block;
        margin-right: 25px;
    }
}

.section {
    margin-bottom: 40px;
}

a {
    &:link {
        text-decoration: none;
        color: @dark_text;
    }

    &:visited {
        color: @dark_text;
    }

    &:hover {
        text-decoration: underline;
    }
}

